--- a/1.html
+++ b/1.html
@@ -19,6 +19,9 @@
  <!--img scr="": ""여기에 그림 이름 써주면 그림으로 나타남!그대신 그림이 폴더 안에 있어야함!그리고 이미지의 너비를 조정하고 싶을 때는 width='픽셀'을 앞이나 뒤에 붙여주면 됨.-->
  <p style="margin-top:40px;">HTML describes the structure of a web page semantically and originally included cues for the appearance of the document. HTML elements are the building blocks of HTML pages.</p> With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page.<br> It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.
 
+ <p>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/9GkFI1ovBbU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
 
  <!-- HTML은 부모태그와 자식태그가 있음. list작성할 때는 두개지만 표(table)작성할 때는 3 태그가 같이 나옴-->
  <!--목차를 쓸 때 줄바꿈해주고 싶다면 <br>을 쓰는게 아니라 list의 앞 글자 두개인 li를 따와서 <li></li>를 써줘야 함. -->
